--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		$(document).ready(function() {
 			$.getJSON('/timesheet/2012-12-01', function(data) {
 				$.each(data, function(index, value) {
-					$('table#eventsTable').append("<tr><td>" + value.eventDate + "</td><td>" + eventTypeStr(value.eventType) + "</td><td>" + value.extraInfo +"</td></tr>")
+					$('table#eventsTable').append("<tr><td>" + value.project + "</td><td>" + value.eventDate + "</td><td>" + eventTypeStr(value.eventType) + "</td><td>" + value.extraInfo +"</td></tr>")
 				})
 			});
 		});
