--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <html>
+	<head>
+		<style>
+			#pleasehold {
+				width: 200px;
+				height: 50px;
+				background: blue;
+				text-align: center;
+
+				/* the following two lines center
+				   the block. */
+				margin-left: auto;
+				margin-right: auto;
+
+				/* with line-height==height,
+				   text will be vertically centered. */
+				line-height: 50px;
+			}
+		</style>
+	</head>
 	<body>
 		<script type='text/javascript' src='/static/jquery-1.8.3.min.js'></script>
 		<!--	<script type='text/javascript' src='/static/knockout-2.2.0.js'></script> -->
@@ -34,9 +53,11 @@
 			if (val) {
 				$('#nextDay').show();
 				$('#previousDay').show();
+				$('#pleasehold').hide();
 			} else {
 				$('#nextDay').hide();
 				$('#previousDay').hide();
+				$('#pleasehold').show();
 			}
 		}
 
@@ -73,4 +94,6 @@
 	<span id="nextDay">[Next day]</span>
 
 	<table id="eventsTable"></table>
+
+	<div id="pleasehold">Please hold...</div>
 </html>
