--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			#pleasehold {
 				width: 200px;
 				height: 50px;
-				background: blue;
+				background: aliceblue;
 				text-align: center;
 
 				/* the following two lines center
@@ -19,6 +19,14 @@
 
 			/* http://stackoverflow.com/a/2855726/516188 */
 			.ui-widget { font-size: 0.6em !important; }
+
+			table#eventsTable {
+				border-spacing: 0px;
+			}
+
+			table#eventsTable tr:nth-child(even) {
+				background: aliceblue;
+			}
 		</style>
 		<script type='text/javascript' src='/static/jquery-1.8.3.min.js'></script>
 		<script type='text/javascript' src='/static/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js'></script>
