progress, except having to go through HTTP for the calendar due to segfault

--- a/index.html
+++ b/index.html
@@ -58,12 +58,6 @@
 
 	<script>
 
-		function eventTypeStr(eventType) {
-			result = {}
-			$.each(eventType, function(k,v) { result = k})
-			return result;
-		}
-
 		displayDate = new Date();
 
 		function getDateStr() {
@@ -98,13 +92,12 @@
 			$('#pleasehold').show();
 			$('table#eventsTable').empty();
 			$('table#eventsTable').append("<tr><th>Project</th><th>Time</th>"
-				+ "<th>Event type</th><th>Description</th><th>Extra info</th></tr>")
+				+ "<th>Description</th><th>Extra info</th></tr>")
 			$.getJSON('/timesheet/' + getDateStr(), function(data) {
 				$.each(data, function(index, value) {
 					$('table#eventsTable').append("<tr>"
 							+ "<td>" + value.project
 							+ "</td><td>" + formatTime(value.eventDate)
-							+ "</td><td>" + eventTypeStr(value.eventType)
 							+ "</td><td>" + value.desc 
 							+ "</td><td>" + value.extraInfo 
 							+ "</td></tr>");
