--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 			table#eventsTable tr:nth-child(even) {
 				background: aliceblue;
 			}
+
+			table#eventsTable tr.current td:first-child {
+				border-left: 1px dashed #000000;
+			}
+
+			table#eventsTable tr.current td:last-child {
+				border-right: 1px dashed #000000;
+			}
+
+			table#eventsTable tr.current td {
+				border-top: 1px dashed #000000;
+				border-bottom: 1px dashed #000000;
+			}
 		</style>
 		<script type='text/javascript' src='/static/jquery-1.8.3.min.js'></script>
 		<script type='text/javascript' src='/static/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js'></script>
@@ -88,6 +101,11 @@
 			$('#sidebar').html(value);
 		}
 
+		function setCurrentRow(row) {
+			$(row).parent().children('tr').removeClass("current");
+			$(row).addClass("current");
+		}
+
 		function updateDisplay() {
 			$('#pleasehold').show();
 			$('table#eventsTable').empty();
@@ -105,6 +123,7 @@
 							+ "</td><td>" + value.extraInfo 
 							+ "</td></tr>");
 					$('table#eventsTable tr:last').click(function() {
+						setCurrentRow($(this));
 						setSidebarVal(value.fullContents);
 					});
 				})
