clear the sidebar when changing days

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 		}
 
 		function updateDisplay() {
+			setSidebarVal('');
 			$('#pleasehold').show();
 			$('table#eventsTable').empty();
 			$('table#eventsTable').append("<tr><th>Project</th><th>Time</th>"
