scrolling for the sidebar

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 	<head>
 		<style>
 			#sidebar {
-				width: 300px;
+				width: 400px;
 				background: aliceblue;
 				display: inline-block;
+				overflow: auto;
+				top: 15px;
+				bottom: 15px;
+				position: absolute;
 			}
 
 			#pleasehold {
