--- a/config.html
+++ b/config.html
@@ -14,6 +14,7 @@
 	<script>
 		function loadPluginAndConfigOpts() {
 			$.getJSON('/configdesc', function(data) {
+				window.pluginInfos = {};
 				$.each(data, function(index, pluginInfo) {
 					handleConfigPluginInfo(pluginInfo);
 				});
@@ -33,21 +34,22 @@
 				pluginConfig.pluginName + "</h3>");
 			var datatypes = pluginConfig.pluginConfig;
 			$.each(datatypes[0].members, function(index, configDataInfo) {
-				var divtxt = getHtmlConfigDataInfoForm(configDataInfo, datatypes);
+				var divtxt = getHtmlConfigDataInfoForm(pluginConfig.pluginName,
+					configDataInfo, datatypes);
 				$('div#optionValues').append(divtxt + '<br/>');
 			});
 		}
 
-		function getHtmlProvidedType(providedTypes, typename) {
+		function getHtmlProvidedType(pluginName, providedTypes, typename) {
 			var result = null;
 			$.each(providedTypes, function(idx, val) {
 				if (val.dataName === typename) {
-					result = getHtmlProvidedTypeForm(val, providedTypes);
+					result = getHtmlProvidedTypeForm(pluginName, val, providedTypes);
 					return false;
 				}
 				if ('[' + val.dataName + ']' === typename) {
 					// array of that type..
-					result = getHtmlProvidedTypeForm(val, providedTypes);
+					result = getHtmlProvidedTypeForm(pluginName, val, providedTypes);
 					return false;
 				}
 			});
@@ -57,19 +59,20 @@
 			return result;
 		}
 
-		function getHtmlProvidedTypeForm(configDataType, datatypes) {
+		function getHtmlProvidedTypeForm(pluginName, configDataType, datatypes) {
 			var result = "";
 			$.each(configDataType.members, function(idx, configDataInfo) {
-				var divtxt = getHtmlConfigDataInfoForm(configDataInfo, datatypes);
+				var divtxt = getHtmlConfigDataInfoForm(pluginName, configDataInfo, datatypes);
 				result += divtxt + '<br/>';
 			});
 			return result;
 		}
 
-		function getHtmlConfigDataInfoForm(configDataInfo, datatypes) {
+		function getHtmlConfigDataInfoForm(pluginName, configDataInfo, datatypes) {
 			if (configDataInfo.memberType.indexOf('[') == 0) {
 				// array...
-				return wrapInArray(configDataInfo.memberType.substring(1, configDataInfo.memberType.length-1),
+				return wrapInArray(pluginName,
+					configDataInfo.memberType.substring(1, configDataInfo.memberType.length-1),
 					configDataInfo.memberName, datatypes);
 			} else {
 				switch (configDataInfo.memberType) {
@@ -81,7 +84,7 @@
 					// ok we don't know the type,
 					// but maybe it's described in
 					// the config:
-					return getHtmlProvidedType(datatypes, configDataInfo.memberType);
+					return getHtmlProvidedType(pluginName, datatypes, configDataInfo.memberType);
 				}
 			}
 		}
@@ -92,10 +95,24 @@
 			return memberTitle + '<input type="text"/>';
 		}
 
-		function wrapInArray(memberTypeInArray, memberTitle, datatypes) {
-			var divContents = getHtmlConfigDataInfoForm({'memberType': memberTypeInArray, 
-				'memberName': memberTitle}, datatypes);
-			return "<div class='arrayWrap'>" + divContents + '<+><br/></div>';
+		function addHtml(elt, pluginName, memberType, memberName) {
+			var datatypes = window.pluginInfos[pluginName].pluginConfig;
+			$(elt).append(getHtmlConfigDataInfoForm(pluginName, {'memberType':memberType,
+				'memberName':memberName}, datatypes));
+		}
+
+		function wrapInArray(pluginName, memberTypeInArray, memberTitle, datatypes) {
+			var divContents = getHtmlConfigDataInfoForm(pluginName,
+				{'memberType': memberTypeInArray, 'memberName': memberTitle}, datatypes);
+			var result = "<div class='arrayWrap'>" + divContents +
+				'<span onclick="addHtml(this, \'' +
+					pluginName +'\',\''+
+					memberTypeInArray+'\',\''+
+					memberTitle +
+					'\');">&lt;+&gt;</span>' +
+				'<br/></div>'; // TODO i need an event listener on the span
+			//alert(result);
+			return result;
 		}
 
 		function handleConfigPluginInfo(pluginConfig) {
@@ -103,6 +120,7 @@
 				value: pluginConfig.pluginName,
 				text : pluginConfig.pluginName})
 			);
+			window.pluginInfos[pluginConfig.pluginName] = pluginConfig;
 
 		}
 
