--- a/config.html
+++ b/config.html
@@ -39,90 +39,106 @@
 				pluginName + "</h3>");
 			$.each(datatypes[0].members, function(index, configDataInfo) {
 				var divtxt = getHtmlConfigDataInfoForm(pluginName,
-					configDataInfo, datatypes);
+					configDataInfo, datatypes, index);
 				$('div#optionValues').append(divtxt + '<br/>');
 			});
 			$('div#optionValues').append("<a href='#' id='addBtn'>Add</a>");
 			$('a#addBtn').button().click(function(event) {
-				// TODO actually add plugin
+				$.each(datatypes[0].members, function(index, configDataInfo) {
+					alert(getOptionValue(pluginName,
+						configDataInfo, datatypes, index));
+				});
+				//addPlugin(pluginName, );
 				$('div#addPopup').dialog('close');
 			});
 		}
 
-		function getHtmlProvidedType(pluginName, providedTypes, typename) {
-			var result = null;
-			$.each(providedTypes, function(idx, val) {
-				if (val.dataName === typename) {
-					result = getHtmlProvidedTypeForm(pluginName, val, providedTypes);
-					return false;
-				}
-				if ('[' + val.dataName + ']' === typename) {
-					// array of that type..
-					result = getHtmlProvidedTypeForm(pluginName, val, providedTypes);
-					return false;
-				}
-			});
-			if (result == null) {
-				alert("failed to handle type " + typename);
-			}
-			return result;
-		}
+		// function getHtmlProvidedType(pluginName, providedTypes, typename) {
+		// 	var result = null;
+		// 	$.each(providedTypes, function(idx, val) {
+		// 		if (val.dataName === typename) {
+		// 			result = getHtmlProvidedTypeForm(pluginName, val, providedTypes);
+		// 			return false;
+		// 		}
+		// 		if ('[' + val.dataName + ']' === typename) {
+		// 			// array of that type..
+		// 			result = getHtmlProvidedTypeForm(pluginName, val, providedTypes);
+		// 			return false;
+		// 		}
+		// 	});
+		// 	if (result == null) {
+		// 		alert("failed to handle type " + typename);
+		// 	}
+		// 	return result;
+		// }
 
-		function getHtmlProvidedTypeForm(pluginName, configDataType, datatypes) {
-			var result = "";
-			$.each(configDataType.members, function(idx, configDataInfo) {
-				var divtxt = getHtmlConfigDataInfoForm(pluginName, configDataInfo, datatypes);
-				result += divtxt + '<br/>';
-			});
-			return result;
-		}
+		// function getHtmlProvidedTypeForm(pluginName, configDataType, datatypes) {
+		// 	var result = "";
+		// 	$.each(configDataType.members, function(idx, configDataInfo) {
+		// 		var divtxt = getHtmlConfigDataInfoForm(pluginName, configDataInfo, datatypes);
+		// 		result += divtxt + '<br/>';
+		// 	});
+		// 	return result;
+		// }
 
-		function getHtmlConfigDataInfoForm(pluginName, configDataInfo, datatypes) {
-			if (configDataInfo.memberType.indexOf('[') == 0) {
-				// array...
-				return wrapInArray(pluginName,
-					configDataInfo.memberType.substring(1, configDataInfo.memberType.length-1),
-					configDataInfo.memberName, datatypes);
-			} else {
+		function getHtmlConfigDataInfoForm(pluginName, configDataInfo, datatypes, index) {
+			// if (configDataInfo.memberType.indexOf('[') == 0) {
+			// 	// array...
+			// 	return wrapInArray(pluginName,
+			// 		configDataInfo.memberType.substring(1, configDataInfo.memberType.length-1),
+			// 		configDataInfo.memberName, datatypes);
+			// } else {
 				switch (configDataInfo.memberType) {
 				case "String":
 				case "Text":
 				case "ByteString":
-					return addTextOption(configDataInfo.memberName);
+					return addTextOption(configDataInfo.memberName, index);
 				default:
 					// ok we don't know the type,
 					// but maybe it's described in
 					// the config:
 					return getHtmlProvidedType(pluginName, datatypes, configDataInfo.memberType);
 				}
+			// }
+		}
+
+		function getOptionValue(pluginName, configDataInfo, datatypes, index) {
+			switch (configDataInfo.memberType) {
+				case "String":
+				case "Text":
+				case "ByteString":
+					return $("input#text" + index).val();
+				default:
+					return null;
+
 			}
 		}
 
-		function addTextOption(memberTitle) {
+		function addTextOption(memberTitle, index) {
 			// TODO use the label tag for the description
 			// but then i must generate a unique ID.
-			return memberTitle + '<input type="text"/>';
+			return memberTitle + '<input type="text" id="text' + index + '"/>';
 		}
 
-		function addHtml(elt, pluginName, memberType, memberName) {
-			var datatypes = window.pluginInfos[pluginName].pluginConfig;
-			$(elt).before(getHtmlConfigDataInfoForm(pluginName, {'memberType':memberType,
-				'memberName':memberName}, datatypes));
-		}
+		// function addHtml(elt, pluginName, memberType, memberName) {
+		// 	var datatypes = window.pluginInfos[pluginName].pluginConfig;
+		// 	$(elt).before(getHtmlConfigDataInfoForm(pluginName, {'memberType':memberType,
+		// 		'memberName':memberName}, datatypes));
+		// }
 
-		function wrapInArray(pluginName, memberTypeInArray, memberTitle, datatypes) {
-			var divContents = getHtmlConfigDataInfoForm(pluginName,
-				{'memberType': memberTypeInArray, 'memberName': memberTitle}, datatypes);
-			var result = "<div class='arrayWrap'>" + divContents +
-				'<span onclick="addHtml(this, \'' +
-					pluginName +'\',\''+
-					memberTypeInArray+'\',\''+
-					memberTitle +
-					'\');">&lt;+&gt;</span>' +
-				'<br/></div>'; // TODO i need an event listener on the span
-			//alert(result);
-			return result;
-		}
+		//function wrapInArray(pluginName, memberTypeInArray, memberTitle, datatypes) {
+		//	var divContents = getHtmlConfigDataInfoForm(pluginName,
+		//		{'memberType': memberTypeInArray, 'memberName': memberTitle}, datatypes);
+		//	var result = "<div class='arrayWrap'>" + divContents +
+		//		'<span onclick="addHtml(this, \'' +
+		//			pluginName +'\',\''+
+		//			memberTypeInArray+'\',\''+
+		//			memberTitle +
+		//			'\');">&lt;+&gt;</span>' +
+		//		'<br/></div>';
+		//	//alert(result);
+		//	return result;
+		//}
 
 		function loadCurConfig() {
 			var byPlugin = {};
